--- a/display/templates/all.html
+++ b/display/templates/all.html
@@ -49,13 +49,20 @@
                     {% for show in show_list %}
                         <li class="edit">
                             <a href="/shows/{{show.id}}">Show</a>
-                            <a href="/{{show.id}}/edit">Edit</a>
+                            <a href="/edit/{{show.id}}">Edit</a>
                             <a href="/{{show.id}}/delete">Delete</a>
                         </li>
                     {% endfor %}
                 </ul>
+              
             </div> 
-
+            {% if messages %}
+            <ul class="messages">    
+                {% for message in messages %}    
+                    <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>    
+                {% endfor %}
+            </ul>
+            {% endif %}
             
             
         </div>
